--- a/server/ormconfig.json
+++ b/server/ormconfig.json
@@ -2,9 +2,9 @@
   "type": "mysql",
   "host": "localhost",
   "port": 3306,
-  "username": "root",
-  "password": "1q2w3e4r",
-  "database": "login_template",
+  "username": "my_user_name",
+  "password": "my_password",
+  "database": "my_database",
   "synchronize": true,
   "logging": false,
   "entities": ["dist/**/*.entity.js"],
