Refactor code and implement google authentication

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,12 @@
 SECRET_KEY_JWT="JWTSecretKeyHere"
+GOOGLE_CLIENT_ID="546259756995-trbi4tu12scqgbd4231a0f3do0aguut8.apps.googleusercontent.com"
+GOOGLE_SECRET="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"
+
+MYSQL_HOST=127.0.0.1
+MYSQL_PORT=3306
+MYSQL_USER=root
+MYSQL_PASSWORD=1q2w3e4r
+MYSQL_DATABASE=auth_db
+PORT=5001
+MODE=DEV
+RUN_MIGRATIONS=true
