--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-query": "^3.39.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.3-alpha.2",
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
@@ -49,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
