--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 SECRET_KEY_JWT="JWTSecretKeyHere"
-GOOGLE_CLIENT_ID="546259756995-trbi4tu12scqgbd4231a0f3do0aguut8.apps.googleusercontent.com"
-GOOGLE_SECRET="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"
+GOOGLE_CLIENT_ID=MY_GOOGLE_CLIENT_ID
+GOOGLE_SECRET=MY_SECRET_KEY
 
 MYSQL_HOST=MYSQL_HOST
 MYSQL_PORT=MYSQL_PORT
