--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,13 @@
 SECRET_KEY_JWT="JWTSecretKeyHere"
+GOOGLE_CLIENT_ID=MY_GOOGLE_CLIENT_ID
+GOOGLE_SECRET=MY_SECRET_KEY
+
+MYSQL_HOST=MYSQL_HOST
+MYSQL_PORT=MYSQL_PORT
+MYSQL_USER=MYSQL_USER
+MYSQL_PASSWORD=MYSQL_PASSWORD
+MYSQL_DATABASE=MYSQL_DB
+
+PORT=MY_SERVER_PORT
+MODE=DEV
+RUN_MIGRATIONS=true
